# claude-code-py

./: .gitignore  LICENSE  README.md  pyproject.toml
conformance/: README.md  test_config_conformance.py  test_tool_behavior.py  test_tool_schemas.py
docs/: how-ai-coding-agents-work.md
docs/tutorial/: README.md  chapter-01-hello-agent.md  chapter-02-adding-tools.md  chapter-03-agentic-loop.md  chapter-04-terminal-ui.md  chapter-05-context-engineering.md  chapter-06-permissions-safety.md  chapter-07-extension-points.md
src/claude_code/: __init__.py  __main__.py  cli.py
src/claude_code/bootstrap/: state.py
src/claude_code/commands/: registry.py
src/claude_code/context/: git_context.py  system_prompt.py  user_context.py
src/claude_code/hooks/: config.py  events.py  runner.py
src/claude_code/memory/: memdir.py  paths.py  types.py
src/claude_code/permissions/: check.py  modes.py
src/claude_code/plugins/: builtin.py  loader.py
src/claude_code/query/: engine.py  loop.py
src/claude_code/services/api/: claude.py  client.py  errors.py
src/claude_code/services/compact/: compact.py
src/claude_code/skills/: bundled.py  loader.py
src/claude_code/state/: app_state.py  store.py
src/claude_code/tool/: base.py  executor.py  registry.py  streaming_executor.py
src/claude_code/tui/: app.py  themes.py
src/claude_code/types/: ids.py  message.py  permissions.py
src/claude_code/utils/: auth.py  config.py  diff.py  git.py  session_storage.py  shell.py  tokens.py
tests/: test_app_state.py  test_context.py  test_extended_tools.py  test_hooks_commands.py  test_messages.py  test_phase7.py  test_store.py
tests/tools/: test_core_tools.py  test_executor.py
tests/tui/: test_app.py
(+34 files in other folders)
