[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-py"
version = "0.1.0"
description = "A Python reimplementation of Claude Code - Anthropic's CLI coding agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "claude-code-py contributors" },
]
keywords = ["claude", "anthropic", "cli", "coding-agent", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "textual>=1.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "aiofiles>=24.0.0",
    "wcmatch>=8.5",
    "ddgs>=9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
claude-code-py = "claude_code.cli:main"

[project.urls]
Homepage = "https://github.com/gpengzhi/claude-code-py"
Repository = "https://github.com/gpengzhi/claude-code-py"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
